syntax = "proto3";

package pb;

message User {
    int64 id = 1;
    string emailAddress = 2;
    string fullName = 3;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse) {}
    rpc GetUser (UserRequest) returns (UserResponse) {}
    rpc UpdateUser (UserRequest) returns (UserResponse) {}
    rpc DeleteUser (UserRequest) returns (UserResponse) {}
}
